v1.3.1 - Pending
	+ Vertically center currently playing song
	+ Allow screen center for notification popup
	+ Retain library path when re-opening Sonata
	+ Ability to hide progress bar (can create very minimal player)
	+ Skip fallback artwork search of just album name if primary searches fail
	+ Shortcut to search library (ctrl-h)
	+ Shortcut to display song info window (f2)
	+ Bug: Right-click menu can cause accidental actions with some gtk themes
	+ Bug: Prevent crash on negative disc/track numbers
	+ Bug: Filter + Edit Tags edits a different song than selected
	+ Bug: Prevent possible exception regarding cover art on first load
	+ Bug: Allow MPD_HOST to override GUI
	+ Bug: {} displays in the Current column title
	+ Bug: Fix manpage path to be FHS compliant

v1.3 - October 29, 2007
	+ Playlist queue support (requires mpd 0.14 - currently mpd-svn)
	+ Use-configurable columns in playlist by using "|" in prefs > format (xsdnyd)
	+ Switch from SOAPpy to newer ZSI library for lyrics fetching
	+ Use xmms-like search filter by default when user types (no more ctrl-j)
	+ Ctrl-i shortcut to center currently playing song
	+ Use case insensitive sorting for library (holy_robot)
	+ Ignore "the" when sorting library in artist/album views (holy_robot)
	+ Better logic when sorting playlists and new "dir+file" sort option (sed)
	+ Allow saving/overwriting existing playlists and streams
	+ Hidden config options to set browser, hide column headers
	+ Update license to GNU GPLv3
	+ Added Brazilian translation (Alex Tercete Matos)
	+ Added Danish translation (Martin Dybdal)
	+ Bug: Fix nl.po translation causing crash
	+ Bug: Remember playlist position when adding from library
	+ Bug: Fixed tracebacks with certain encodings
	+ Bug: MPD_HOST with password doesn't work on first install
	+ Bug: Fix desktop file to match current XDG standard (nigel)
	+ Bug: Search Amazon artwork using latin1 since it no longer supports utf8